phase_2/dsilv022/mini_l.output
Grammar

    0 $accept: program $end

    1 program: functions

    2 functions: /* empty */
    3          | function functions

    4 function: FUNCTION IDENT SEMICOLON BEGIN_PARAMS declarations END_PARAMS BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statement SEMICOLON statements END_BODY

    5 declarations: /* empty */
    6             | declaration SEMICOLON declarations

    7 declaration: IDENT idents COLON ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER
    8            | IDENT idents COLON INTEGER

    9 idents: /* empty */
   10       | COMMA IDENT idents

   11 statements: /* empty */
   12           | statement SEMICOLON statements

   13 statement: var ASSIGN expression
   14          | IF bool_expr THEN statement SEMICOLON statements ENDIF
   15          | IF bool_expr THEN statement SEMICOLON statements ELSE statement SEMICOLON statements ENDIF
   16          | WHILE bool_expr BEGINLOOP statement SEMICOLON statements ENDLOOP
   17          | DO BEGINLOOP statement SEMICOLON statements ENDLOOP WHILE bool_expr
   18          | READ var vars
   19          | WRITE var vars
   20          | CONTINUE
   21          | RETURN expression

   22 bool_expr: relation_and_expr bool_expressions

   23 bool_expressions: /* empty */
   24                 | OR relation_and_expr bool_expressions

   25 relation_and_expr: relation_expr relation_and_expressions

   26 relation_and_expressions: /* empty */
   27                         | AND relation_expr relation_and_expressions

   28 relation_expr: expression comp expression
   29              | TRUE
   30              | FALSE
   31              | L_PAREN bool_expr R_PAREN
   32              | NOT expression comp expression
   33              | NOT TRUE
   34              | NOT FALSE
   35              | NOT L_PAREN bool_expr R_PAREN

   36 comp: EQ
   37     | NEQ
   38     | LT
   39     | GT
   40     | LTE
   41     | GTE

   42 expression: multiplicative_expr expression_loop

   43 expression_loop: /* empty */
   44                | ADD multiplicative_expr expression_loop
   45                | SUB multiplicative_expr expression_loop

   46 expressions: expression COMMA expressions
   47            | expression
   48            | /* empty */

   49 terms: /* empty */
   50      | MOD term terms
   51      | DIV term terms
   52      | MULT term terms

   53 multiplicative_expr: term terms

   54 term: IDENT L_PAREN expressions R_PAREN
   55     | NUMBER
   56     | var
   57     | L_PAREN expression R_PAREN
   58     | UMINUS NUMBER
   59     | UMINUS var
   60     | UMINUS L_PAREN expression R_PAREN
   61     | UMINUS IDENT L_PAREN expressions R_PAREN

   62 var: IDENT
   63    | IDENT L_SQUARE_BRACKET expression R_SQUARE_BRACKET

   64 vars: /* empty */
   65     | COMMA var vars


Terminals, with rules where they appear

$end (0) 0
error (256)
FUNCTION (258) 4
BEGIN_PARAMS (259) 4
END_PARAMS (260) 4
BEGIN_LOCALS (261) 4
END_LOCALS (262) 4
BEGIN_BODY (263) 4
END_BODY (264) 4
INTEGER (265) 7 8
ARRAY (266) 7
OF (267) 7
IF (268) 14 15
THEN (269) 14 15
ENDIF (270) 14 15
ELSE (271) 15
WHILE (272) 16 17
DO (273) 17
BEGINLOOP (274) 16 17
ENDLOOP (275) 16 17
CONTINUE (276) 20
READ (277) 18
WRITE (278) 19
AND (279) 27
OR (280) 24
NOT (281) 32 33 34 35
TRUE (282) 29 33
FALSE (283) 30 34
RETURN (284) 21
IDENT (285) 4 7 8 10 54 61 62 63
COLON (286) 7 8
SEMICOLON (287) 4 6 12 14 15 16 17
COMMA (288) 10 46 65
NUMBER (289) 7 55 58
ASSIGN (290) 13
NEQ (291) 37
EQ (292) 36
GTE (293) 41
GT (294) 39
LTE (295) 40
LT (296) 38
SUB (297) 45
ADD (298) 44
MOD (299) 50
DIV (300) 51
MULT (301) 52
UMINUS (302) 58 59 60 61
L_SQUARE_BRACKET (303) 7 63
R_SQUARE_BRACKET (304) 7 63
L_PAREN (305) 31 35 54 57 60 61
R_PAREN (306) 31 35 54 57 60 61


Nonterminals, with rules where they appear

$accept (52)
    on left: 0
program (53)
    on left: 1, on right: 0
functions (54)
    on left: 2 3, on right: 1 3
function (55)
    on left: 4, on right: 3
declarations (56)
    on left: 5 6, on right: 4 6
declaration (57)
    on left: 7 8, on right: 6
idents (58)
    on left: 9 10, on right: 7 8 10
statements (59)
    on left: 11 12, on right: 4 12 14 15 16 17
statement (60)
    on left: 13 14 15 16 17 18 19 20 21, on right: 4 12 14 15 16 17
bool_expr (61)
    on left: 22, on right: 14 15 16 17 31 35
bool_expressions (62)
    on left: 23 24, on right: 22 24
relation_and_expr (63)
    on left: 25, on right: 22 24
relation_and_expressions (64)
    on left: 26 27, on right: 25 27
relation_expr (65)
    on left: 28 29 30 31 32 33 34 35, on right: 25 27
comp (66)
    on left: 36 37 38 39 40 41, on right: 28 32
expression (67)
    on left: 42, on right: 13 21 28 32 46 47 57 60 63
expression_loop (68)
    on left: 43 44 45, on right: 42 44 45
expressions (69)
    on left: 46 47 48, on right: 46 54 61
terms (70)
    on left: 49 50 51 52, on right: 50 51 52 53
multiplicative_expr (71)
    on left: 53, on right: 42 44 45
term (72)
    on left: 54 55 56 57 58 59 60 61, on right: 50 51 52 53
var (73)
    on left: 62 63, on right: 13 18 19 56 59 65
vars (74)
    on left: 64 65, on right: 18 19 65


state 0

    0 $accept: . program $end

    FUNCTION  shift, and go to state 1

    $default  reduce using rule 2 (functions)

    program    go to state 2
    functions  go to state 3
    function   go to state 4


state 1

    4 function: FUNCTION . IDENT SEMICOLON BEGIN_PARAMS declarations END_PARAMS BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statement SEMICOLON statements END_BODY

    IDENT  shift, and go to state 5


state 2

    0 $accept: program . $end

    $end  shift, and go to state 6


state 3

    1 program: functions .

    $default  reduce using rule 1 (program)


state 4

    3 functions: function . functions

    FUNCTION  shift, and go to state 1

    $default  reduce using rule 2 (functions)

    functions  go to state 7
    function   go to state 4


state 5

    4 function: FUNCTION IDENT . SEMICOLON BEGIN_PARAMS declarations END_PARAMS BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statement SEMICOLON statements END_BODY

    SEMICOLON  shift, and go to state 8


state 6

    0 $accept: program $end .

    $default  accept


state 7

    3 functions: function functions .

    $default  reduce using rule 3 (functions)


state 8

    4 function: FUNCTION IDENT SEMICOLON . BEGIN_PARAMS declarations END_PARAMS BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statement SEMICOLON statements END_BODY

    BEGIN_PARAMS  shift, and go to state 9


state 9

    4 function: FUNCTION IDENT SEMICOLON BEGIN_PARAMS . declarations END_PARAMS BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statement SEMICOLON statements END_BODY

    IDENT  shift, and go to state 10

    $default  reduce using rule 5 (declarations)

    declarations  go to state 11
    declaration   go to state 12


state 10

    7 declaration: IDENT . idents COLON ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER
    8            | IDENT . idents COLON INTEGER

    COMMA  shift, and go to state 13

    $default  reduce using rule 9 (idents)

    idents  go to state 14


state 11

    4 function: FUNCTION IDENT SEMICOLON BEGIN_PARAMS declarations . END_PARAMS BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statement SEMICOLON statements END_BODY

    END_PARAMS  shift, and go to state 15


state 12

    6 declarations: declaration . SEMICOLON declarations

    SEMICOLON  shift, and go to state 16


state 13

   10 idents: COMMA . IDENT idents

    IDENT  shift, and go to state 17


state 14

    7 declaration: IDENT idents . COLON ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER
    8            | IDENT idents . COLON INTEGER

    COLON  shift, and go to state 18


state 15

    4 function: FUNCTION IDENT SEMICOLON BEGIN_PARAMS declarations END_PARAMS . BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statement SEMICOLON statements END_BODY

    BEGIN_LOCALS  shift, and go to state 19


state 16

    6 declarations: declaration SEMICOLON . declarations

    IDENT  shift, and go to state 10

    $default  reduce using rule 5 (declarations)

    declarations  go to state 20
    declaration   go to state 12


state 17

   10 idents: COMMA IDENT . idents

    COMMA  shift, and go to state 13

    $default  reduce using rule 9 (idents)

    idents  go to state 21


state 18

    7 declaration: IDENT idents COLON . ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER
    8            | IDENT idents COLON . INTEGER

    INTEGER  shift, and go to state 22
    ARRAY    shift, and go to state 23


state 19

    4 function: FUNCTION IDENT SEMICOLON BEGIN_PARAMS declarations END_PARAMS BEGIN_LOCALS . declarations END_LOCALS BEGIN_BODY statement SEMICOLON statements END_BODY

    IDENT  shift, and go to state 10

    $default  reduce using rule 5 (declarations)

    declarations  go to state 24
    declaration   go to state 12


state 20

    6 declarations: declaration SEMICOLON declarations .

    $default  reduce using rule 6 (declarations)


state 21

   10 idents: COMMA IDENT idents .

    $default  reduce using rule 10 (idents)


state 22

    8 declaration: IDENT idents COLON INTEGER .

    $default  reduce using rule 8 (declaration)


state 23

    7 declaration: IDENT idents COLON ARRAY . L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER

    L_SQUARE_BRACKET  shift, and go to state 25


state 24

    4 function: FUNCTION IDENT SEMICOLON BEGIN_PARAMS declarations END_PARAMS BEGIN_LOCALS declarations . END_LOCALS BEGIN_BODY statement SEMICOLON statements END_BODY

    END_LOCALS  shift, and go to state 26


state 25

    7 declaration: IDENT idents COLON ARRAY L_SQUARE_BRACKET . NUMBER R_SQUARE_BRACKET OF INTEGER

    NUMBER  shift, and go to state 27


state 26

    4 function: FUNCTION IDENT SEMICOLON BEGIN_PARAMS declarations END_PARAMS BEGIN_LOCALS declarations END_LOCALS . BEGIN_BODY statement SEMICOLON statements END_BODY

    BEGIN_BODY  shift, and go to state 28


state 27

    7 declaration: IDENT idents COLON ARRAY L_SQUARE_BRACKET NUMBER . R_SQUARE_BRACKET OF INTEGER

    R_SQUARE_BRACKET  shift, and go to state 29


state 28

    4 function: FUNCTION IDENT SEMICOLON BEGIN_PARAMS declarations END_PARAMS BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY . statement SEMICOLON statements END_BODY

    IF        shift, and go to state 30
    WHILE     shift, and go to state 31
    DO        shift, and go to state 32
    CONTINUE  shift, and go to state 33
    READ      shift, and go to state 34
    WRITE     shift, and go to state 35
    RETURN    shift, and go to state 36
    IDENT     shift, and go to state 37

    statement  go to state 38
    var        go to state 39


state 29

    7 declaration: IDENT idents COLON ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET . OF INTEGER

    OF  shift, and go to state 40


state 30

   14 statement: IF . bool_expr THEN statement SEMICOLON statements ENDIF
   15          | IF . bool_expr THEN statement SEMICOLON statements ELSE statement SEMICOLON statements ENDIF

    NOT      shift, and go to state 41
    TRUE     shift, and go to state 42
    FALSE    shift, and go to state 43
    IDENT    shift, and go to state 44
    NUMBER   shift, and go to state 45
    UMINUS   shift, and go to state 46
    L_PAREN  shift, and go to state 47

    bool_expr            go to state 48
    relation_and_expr    go to state 49
    relation_expr        go to state 50
    expression           go to state 51
    multiplicative_expr  go to state 52
    term                 go to state 53
    var                  go to state 54


state 31

   16 statement: WHILE . bool_expr BEGINLOOP statement SEMICOLON statements ENDLOOP

    NOT      shift, and go to state 41
    TRUE     shift, and go to state 42
    FALSE    shift, and go to state 43
    IDENT    shift, and go to state 44
    NUMBER   shift, and go to state 45
    UMINUS   shift, and go to state 46
    L_PAREN  shift, and go to state 47

    bool_expr            go to state 55
    relation_and_expr    go to state 49
    relation_expr        go to state 50
    expression           go to state 51
    multiplicative_expr  go to state 52
    term                 go to state 53
    var                  go to state 54


state 32

   17 statement: DO . BEGINLOOP statement SEMICOLON statements ENDLOOP WHILE bool_expr

    BEGINLOOP  shift, and go to state 56


state 33

   20 statement: CONTINUE .

    $default  reduce using rule 20 (statement)


state 34

   18 statement: READ . var vars

    IDENT  shift, and go to state 37

    var  go to state 57


state 35

   19 statement: WRITE . var vars

    IDENT  shift, and go to state 37

    var  go to state 58


state 36

   21 statement: RETURN . expression

    IDENT    shift, and go to state 44
    NUMBER   shift, and go to state 45
    UMINUS   shift, and go to state 46
    L_PAREN  shift, and go to state 59

    expression           go to state 60
    multiplicative_expr  go to state 52
    term                 go to state 53
    var                  go to state 54


state 37

   62 var: IDENT .
   63    | IDENT . L_SQUARE_BRACKET expression R_SQUARE_BRACKET

    L_SQUARE_BRACKET  shift, and go to state 61

    $default  reduce using rule 62 (var)


state 38

    4 function: FUNCTION IDENT SEMICOLON BEGIN_PARAMS declarations END_PARAMS BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statement . SEMICOLON statements END_BODY

    SEMICOLON  shift, and go to state 62


state 39

   13 statement: var . ASSIGN expression

    ASSIGN  shift, and go to state 63


state 40

    7 declaration: IDENT idents COLON ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF . INTEGER

    INTEGER  shift, and go to state 64


state 41

   32 relation_expr: NOT . expression comp expression
   33              | NOT . TRUE
   34              | NOT . FALSE
   35              | NOT . L_PAREN bool_expr R_PAREN

    TRUE     shift, and go to state 65
    FALSE    shift, and go to state 66
    IDENT    shift, and go to state 44
    NUMBER   shift, and go to state 45
    UMINUS   shift, and go to state 46
    L_PAREN  shift, and go to state 67

    expression           go to state 68
    multiplicative_expr  go to state 52
    term                 go to state 53
    var                  go to state 54


state 42

   29 relation_expr: TRUE .

    $default  reduce using rule 29 (relation_expr)


state 43

   30 relation_expr: FALSE .

    $default  reduce using rule 30 (relation_expr)


state 44

   54 term: IDENT . L_PAREN expressions R_PAREN
   62 var: IDENT .
   63    | IDENT . L_SQUARE_BRACKET expression R_SQUARE_BRACKET

    L_SQUARE_BRACKET  shift, and go to state 61
    L_PAREN           shift, and go to state 69

    $default  reduce using rule 62 (var)


state 45

   55 term: NUMBER .

    $default  reduce using rule 55 (term)


state 46

   58 term: UMINUS . NUMBER
   59     | UMINUS . var
   60     | UMINUS . L_PAREN expression R_PAREN
   61     | UMINUS . IDENT L_PAREN expressions R_PAREN

    IDENT    shift, and go to state 70
    NUMBER   shift, and go to state 71
    L_PAREN  shift, and go to state 72

    var  go to state 73


state 47

   31 relation_expr: L_PAREN . bool_expr R_PAREN
   57 term: L_PAREN . expression R_PAREN

    NOT      shift, and go to state 41
    TRUE     shift, and go to state 42
    FALSE    shift, and go to state 43
    IDENT    shift, and go to state 44
    NUMBER   shift, and go to state 45
    UMINUS   shift, and go to state 46
    L_PAREN  shift, and go to state 47

    bool_expr            go to state 74
    relation_and_expr    go to state 49
    relation_expr        go to state 50
    expression           go to state 75
    multiplicative_expr  go to state 52
    term                 go to state 53
    var                  go to state 54


state 48

   14 statement: IF bool_expr . THEN statement SEMICOLON statements ENDIF
   15          | IF bool_expr . THEN statement SEMICOLON statements ELSE statement SEMICOLON statements ENDIF

    THEN  shift, and go to state 76


state 49

   22 bool_expr: relation_and_expr . bool_expressions

    OR  shift, and go to state 77

    $default  reduce using rule 23 (bool_expressions)

    bool_expressions  go to state 78


state 50

   25 relation_and_expr: relation_expr . relation_and_expressions

    AND  shift, and go to state 79

    $default  reduce using rule 26 (relation_and_expressions)

    relation_and_expressions  go to state 80


state 51

   28 relation_expr: expression . comp expression

    NEQ  shift, and go to state 81
    EQ   shift, and go to state 82
    GTE  shift, and go to state 83
    GT   shift, and go to state 84
    LTE  shift, and go to state 85
    LT   shift, and go to state 86

    comp  go to state 87


state 52

   42 expression: multiplicative_expr . expression_loop

    SUB  shift, and go to state 88
    ADD  shift, and go to state 89

    $default  reduce using rule 43 (expression_loop)

    expression_loop  go to state 90


state 53

   53 multiplicative_expr: term . terms

    MOD   shift, and go to state 91
    DIV   shift, and go to state 92
    MULT  shift, and go to state 93

    $default  reduce using rule 49 (terms)

    terms  go to state 94


state 54

   56 term: var .

    $default  reduce using rule 56 (term)


state 55

   16 statement: WHILE bool_expr . BEGINLOOP statement SEMICOLON statements ENDLOOP

    BEGINLOOP  shift, and go to state 95


state 56

   17 statement: DO BEGINLOOP . statement SEMICOLON statements ENDLOOP WHILE bool_expr

    IF        shift, and go to state 30
    WHILE     shift, and go to state 31
    DO        shift, and go to state 32
    CONTINUE  shift, and go to state 33
    READ      shift, and go to state 34
    WRITE     shift, and go to state 35
    RETURN    shift, and go to state 36
    IDENT     shift, and go to state 37

    statement  go to state 96
    var        go to state 39


state 57

   18 statement: READ var . vars

    COMMA  shift, and go to state 97

    $default  reduce using rule 64 (vars)

    vars  go to state 98


state 58

   19 statement: WRITE var . vars

    COMMA  shift, and go to state 97

    $default  reduce using rule 64 (vars)

    vars  go to state 99


state 59

   57 term: L_PAREN . expression R_PAREN

    IDENT    shift, and go to state 44
    NUMBER   shift, and go to state 45
    UMINUS   shift, and go to state 46
    L_PAREN  shift, and go to state 59

    expression           go to state 100
    multiplicative_expr  go to state 52
    term                 go to state 53
    var                  go to state 54


state 60

   21 statement: RETURN expression .

    $default  reduce using rule 21 (statement)


state 61

   63 var: IDENT L_SQUARE_BRACKET . expression R_SQUARE_BRACKET

    IDENT    shift, and go to state 44
    NUMBER   shift, and go to state 45
    UMINUS   shift, and go to state 46
    L_PAREN  shift, and go to state 59

    expression           go to state 101
    multiplicative_expr  go to state 52
    term                 go to state 53
    var                  go to state 54


state 62

    4 function: FUNCTION IDENT SEMICOLON BEGIN_PARAMS declarations END_PARAMS BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statement SEMICOLON . statements END_BODY

    IF        shift, and go to state 30
    WHILE     shift, and go to state 31
    DO        shift, and go to state 32
    CONTINUE  shift, and go to state 33
    READ      shift, and go to state 34
    WRITE     shift, and go to state 35
    RETURN    shift, and go to state 36
    IDENT     shift, and go to state 37

    $default  reduce using rule 11 (statements)

    statements  go to state 102
    statement   go to state 103
    var         go to state 39


state 63

   13 statement: var ASSIGN . expression

    IDENT    shift, and go to state 44
    NUMBER   shift, and go to state 45
    UMINUS   shift, and go to state 46
    L_PAREN  shift, and go to state 59

    expression           go to state 104
    multiplicative_expr  go to state 52
    term                 go to state 53
    var                  go to state 54


state 64

    7 declaration: IDENT idents COLON ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER .

    $default  reduce using rule 7 (declaration)


state 65

   33 relation_expr: NOT TRUE .

    $default  reduce using rule 33 (relation_expr)


state 66

   34 relation_expr: NOT FALSE .

    $default  reduce using rule 34 (relation_expr)


state 67

   35 relation_expr: NOT L_PAREN . bool_expr R_PAREN
   57 term: L_PAREN . expression R_PAREN

    NOT      shift, and go to state 41
    TRUE     shift, and go to state 42
    FALSE    shift, and go to state 43
    IDENT    shift, and go to state 44
    NUMBER   shift, and go to state 45
    UMINUS   shift, and go to state 46
    L_PAREN  shift, and go to state 47

    bool_expr            go to state 105
    relation_and_expr    go to state 49
    relation_expr        go to state 50
    expression           go to state 75
    multiplicative_expr  go to state 52
    term                 go to state 53
    var                  go to state 54


state 68

   32 relation_expr: NOT expression . comp expression

    NEQ  shift, and go to state 81
    EQ   shift, and go to state 82
    GTE  shift, and go to state 83
    GT   shift, and go to state 84
    LTE  shift, and go to state 85
    LT   shift, and go to state 86

    comp  go to state 106


state 69

   54 term: IDENT L_PAREN . expressions R_PAREN

    IDENT    shift, and go to state 44
    NUMBER   shift, and go to state 45
    UMINUS   shift, and go to state 46
    L_PAREN  shift, and go to state 59

    $default  reduce using rule 48 (expressions)

    expression           go to state 107
    expressions          go to state 108
    multiplicative_expr  go to state 52
    term                 go to state 53
    var                  go to state 54


state 70

   61 term: UMINUS IDENT . L_PAREN expressions R_PAREN
   62 var: IDENT .
   63    | IDENT . L_SQUARE_BRACKET expression R_SQUARE_BRACKET

    L_SQUARE_BRACKET  shift, and go to state 61
    L_PAREN           shift, and go to state 109

    $default  reduce using rule 62 (var)


state 71

   58 term: UMINUS NUMBER .

    $default  reduce using rule 58 (term)


state 72

   60 term: UMINUS L_PAREN . expression R_PAREN

    IDENT    shift, and go to state 44
    NUMBER   shift, and go to state 45
    UMINUS   shift, and go to state 46
    L_PAREN  shift, and go to state 59

    expression           go to state 110
    multiplicative_expr  go to state 52
    term                 go to state 53
    var                  go to state 54


state 73

   59 term: UMINUS var .

    $default  reduce using rule 59 (term)


state 74

   31 relation_expr: L_PAREN bool_expr . R_PAREN

    R_PAREN  shift, and go to state 111


state 75

   28 relation_expr: expression . comp expression
   57 term: L_PAREN expression . R_PAREN

    NEQ      shift, and go to state 81
    EQ       shift, and go to state 82
    GTE      shift, and go to state 83
    GT       shift, and go to state 84
    LTE      shift, and go to state 85
    LT       shift, and go to state 86
    R_PAREN  shift, and go to state 112

    comp  go to state 87


state 76

   14 statement: IF bool_expr THEN . statement SEMICOLON statements ENDIF
   15          | IF bool_expr THEN . statement SEMICOLON statements ELSE statement SEMICOLON statements ENDIF

    IF        shift, and go to state 30
    WHILE     shift, and go to state 31
    DO        shift, and go to state 32
    CONTINUE  shift, and go to state 33
    READ      shift, and go to state 34
    WRITE     shift, and go to state 35
    RETURN    shift, and go to state 36
    IDENT     shift, and go to state 37

    statement  go to state 113
    var        go to state 39


state 77

   24 bool_expressions: OR . relation_and_expr bool_expressions

    NOT      shift, and go to state 41
    TRUE     shift, and go to state 42
    FALSE    shift, and go to state 43
    IDENT    shift, and go to state 44
    NUMBER   shift, and go to state 45
    UMINUS   shift, and go to state 46
    L_PAREN  shift, and go to state 47

    relation_and_expr    go to state 114
    relation_expr        go to state 50
    expression           go to state 51
    multiplicative_expr  go to state 52
    term                 go to state 53
    var                  go to state 54


state 78

   22 bool_expr: relation_and_expr bool_expressions .

    $default  reduce using rule 22 (bool_expr)


state 79

   27 relation_and_expressions: AND . relation_expr relation_and_expressions

    NOT      shift, and go to state 41
    TRUE     shift, and go to state 42
    FALSE    shift, and go to state 43
    IDENT    shift, and go to state 44
    NUMBER   shift, and go to state 45
    UMINUS   shift, and go to state 46
    L_PAREN  shift, and go to state 47
